# rekko-mcp

./: Dockerfile  README.md  context7.json  glama.json  pyproject.toml  smithery.yaml
.claude-plugin/: plugin.json
.github/workflows/: context7-refresh.yml  publish.yml
skills/rekko/: SKILL.md
src/rekko_mcp/: __init__.py  __main__.py  server.py
