[project]
name = "rekko-mcp"
version = "0.4.1"
description = "MCP server for Rekko AI prediction market intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Rekko AI", email = "hello@rekko.ai" }]
keywords = ["mcp", "prediction-markets", "kalshi", "polymarket", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[project.scripts]
rekko-mcp = "rekko_mcp:main"

[project.urls]
Homepage = "https://rekko.ai"
Documentation = "https://docs.rekko.ai"
Repository = "https://github.com/Rekko-AI/rekko-mcp"
Issues = "https://github.com/Rekko-AI/rekko-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rekko_mcp"]
