[project]
name = "rekko-mcp"
version = "0.8.1"
description = "Prediction market intelligence MCP server — Kalshi, Polymarket, Robinhood, Coinbase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Rekko AI", email = "hello@rekko.ai" }]
keywords = ["mcp", "prediction-markets", "kalshi", "polymarket", "coinbase", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
rekko-mcp = "rekko_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rekko_mcp"]
